Fixed accordion collapsing

--- a/css/index.services.css
+++ b/css/index.services.css
@@ -98,6 +98,7 @@ li.services__tab-item-list-element {
         border-radius: 5px;
         margin-left: auto;
         margin-right: auto;
+        object-fit: cover;
     }
 }
 
@@ -105,6 +106,7 @@ li.services__tab-item-list-element {
     .services__maint-image {
         border-radius: 5px;
         width: 560px;
+        object-fit: cover;
     }
 
     .services__tab-right-content {
